# discord-yt-bot

./: .gitignore  Dockerfile  docker-compose.yaml  download_ffmpeg.sh  main.py  pyproject.toml  ydl.py
.github/workflows/: main.yaml
